Correcting duplicate file saving and free_shipping

--- a/donors-choose-data-prep.ipynb
+++ b/donors-choose-data-prep.ipynb
@@ -8,18 +8,24 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
+    "from __future__ import division\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pylab\n",
     "import re\n",
-    "import nltk, string\n",
-    "from nltk.corpus import brown\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk import FreqDist\n",
+    "import string\n",
     "from operator import itemgetter\n",
-    "from __future__ import division\n",
     "from pandas import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ---------------------------------------------------------------------------\n",
+    "# Data Preparation\n",
+    "# ---------------------------------------------------------------------------"
    ]
   },
   {
@@ -49,24 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "projects = pd.read_csv('Documents/wise/Data/opendata_projects.csv')"
+    "projects = pd.read_csv('../Data/opendata_projects.csv', index_col = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "donations = pd.read_csv('Documents/wise/Data/donations_counts.csv')"
+    "donations = pd.read_csv('../Data/donations_counts.csv')"
    ]
   },
   {
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -86,11 +92,11 @@
    "source": [
     "shipping = projects.loc[:,['vendor_shipping_charges']]\n",
     "\n",
-    "# if shipping_charges = 0 , 1\n",
-    "# if shipping_charges > 0 , 0\n",
+    "# if shipping_charges = 0 , t\n",
+    "# if shipping_charges > 0 , f\n",
     "shipping[shipping == 0] = -1\n",
-    "shipping[shipping > 0] = 0\n",
-    "shipping[shipping == -1] = 1\n",
+    "shipping[shipping > 0] = 'f'\n",
+    "shipping[shipping == -1] = 't'\n",
     "\n",
     "shipping.columns = ['free_shipping']"
    ]
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -347,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -366,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -380,9 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -408,7 +414,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -544,7 +550,7 @@
    },
    "outputs": [],
    "source": [
-    "outside_dat =  pd.read_csv('Documents/wise/Data/outside_dat.csv', dtype = {'zip': np.str_, 'med_inc': np.float64, 'pop': np.float64, 'party': np.str_})"
+    "outside_dat =  pd.read_csv('../Data/outside_dat.csv', dtype = {'zip': np.str_, 'med_inc': np.float64, 'pop': np.float64, 'party': np.str_})"
    ]
   },
   {
@@ -573,8 +579,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop last 20986 rows because those rows only have outside data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "projects = projects.drop(projects.tail(20986).index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save as a data frame for preliminary modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ---------------------------------------------------------------------------\n",
+    "# Generate test set / training set\n",
+    "# ---------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create test set (~20%) by selecting projects posted from Nov 2013 onwards. Then create training (~80%)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -599,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -622,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -634,12 +681,12 @@
     "             'sales_tax', 'payment_processing_charges', 'fulfillment_labor_materials', 'total_price_including_optional_support',\n",
     "             'students_reached', 'total_donations', 'num_donors', 'eligible_double_your_impact_match', \n",
     "             'eligible_almost_home_match', 'funding_status', 'date_posted', 'date_completed', 'date_thank_you_packet_mailed',\n",
-    "             'date_expiration', 'secondary_focus_subject']"
+    "             'date_expiration', 'secondary_focus_subject', 'Unnamed: 0']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -650,14 +697,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "projects_modified.to_csv('projects_modified.csv')"
+    "projects_modified.to_csv('../Data/projects_prelim_data.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
